	main/game.c, main/gamecntl.c, main/gamepal.c, main/gamerend.c,
	main/gameseq.c, main/gauges.c, main/hud.c, main/inferno.c,
	main/kconfig.c, main/kmatrix.c, main/menu.c, main/movie.c,
	main/newmenu.c, main/object.c, main/playsave.c, main/polyobj.c,
	main/render.c, main/state.c, main/texmerge.c, main/titles.c:
	remove all the redundant Polygon Acceleration stuff
	(include/pa_enabl.h)

2005-07-29  Chris Taylor  <chris@icculus.org>

	* 2d/font.c: show some missing wide 1's (bug #2269)

	* main/game.c: only shoot when fire button down (fix bug #2271)

2005-07-28  Chris Taylor  <chris@icculus.org>

	* main/gauges.c: show gauges in SDL (help fix bug #2267)

2005-07-27  Chris Taylor  <chris@icculus.org>

	* d2x.xcode/project.pbxproj: build the editor by default

2005-07-25  Chris Taylor  <chris@icculus.org>

	* main/bmread.c: cast some fprintf arguments to int, to fix
	warnings

	* main/editor/medrobot.c: no checking if obj->id > -1
	(it's unsigned)

	* main/editor/ksegsize.c, main/editor/segment.c,
	main/editor/seguvs.c, ui/mouse.c: avoid assignments between
	sbyte * and char *, ubyte * and char * to fix warnings with gcc 4.0

2005-07-24  Chris Taylor  <chris@icculus.org>

	* main/bmread.c: call file static var 'time' 'play_time' instead,
	because of conflict with function 'time' in /usr/include/time.h
	(Mac OS X 10.4)

2005-07-22  Chris Taylor  <chris@icculus.org>

	* main/editor/group.c: remove duplicate tmap_xlate_table

2005-07-21  Chris Taylor  <chris@icculus.org>

	* d2x.xcode/project.pbxproj: make file paths relative to project,
	add some files (so it builds), warnings are not errors
	(ubyte *, sbyte * mismatches found when using gcc 4.0)

	* arch/linux/ipx_mcast4.c, arch/linux/ipx_udp.c,
	d2x.xcode/project.pbxproj, main/network.c, main/network.h,
	main/newdemo.c: fix pointer mismatches, warnings are errors again

2005-07-03  Chris Taylor  <chris@icculus.org>

	* include/ui.h, ui/file.c, ui/inputbox.c: add ui_inputbox_set_text
