@@ -1,4 +1,4 @@
-/* $Id: gamerend.c,v 1.16 2005-07-30 01:50:17 chris Exp $ */
+/* $Id: gamerend.c,v 1.17 2005-07-30 07:46:03 chris Exp $ */
 /*
 THE COMPUTER CODE CONTAINED HEREIN IS THE SOLE PROPERTY OF PARALLAX
 SOFTWARE CORPORATION ("PARALLAX").  PARALLAX, IN DISTRIBUTING THE CODE TO
@@ -23,7 +23,7 @@ COPYRIGHT 1993-1999 PARALLAX SOFTWARE CORPORATION.  ALL RIGHTS RESERVED.
 #endif
 
 #ifdef RCS
-static char rcsid[] = "$Id: gamerend.c,v 1.16 2005-07-30 01:50:17 chris Exp $";
+static char rcsid[] = "$Id: gamerend.c,v 1.17 2005-07-30 07:46:03 chris Exp $";
 #endif
 
 #ifdef WINDOWS
@@ -1143,11 +1143,6 @@ void game_render_frame_mono(void)
 						&VR_render_sub_buffer[0].cv_bitmap, 
 						&VR_screen_pages[0].cv_bitmap );
 			#endif
-
-         #ifdef _3DFX
-         _3dfx_BufferSwap();
-         #endif
-
 			}
 		} else	{
 			#if 1 //def MACINTOSH
